--- a/src/Extension/RemoteDebuggerLauncherShared/RemoteDebuggerLauncherShared.csproj
+++ b/src/Extension/RemoteDebuggerLauncherShared/RemoteDebuggerLauncherShared.csproj
@@ -43,7 +43,7 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="SecureShell\ISecureShellKeyPairCreatorService.cs" />
+    <Compile Include="RemoteOperations\ISecureShellKeyPairCreatorService.cs" />
     <Compile Include="Shared\SetupMode.cs" />
     <Compile Include="Shared\PublishMode.cs" />
     <Compile Include="Shared\Constants.cs" />
