--- a/samples/net8/WebAspSpa/ClientApp/angular.json
+++ b/samples/net8/WebAspSpa/ClientApp/angular.json
@@ -72,11 +72,11 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "AspNetSpa:build:production"
+              "buildTarget": "AspNetSpa:build:production"
             },
             "development": {
-              "browserTarget": "AspNetSpa:build:development",
-              "proxyConfig": "proxy.conf.js"
+              "proxyConfig": "proxy.conf.js",
+              "buildTarget": "AspNetSpa:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -84,7 +84,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "AspNetSpa:build"
+            "buildTarget": "AspNetSpa:build"
           }
         },
         "test": {
@@ -117,7 +117,8 @@
               "sourceMap": false,
               "namedChunks": false,
               "extractLicenses": true,
-              "vendorChunk": true
+              "vendorChunk": true,
+              "buildOptimizer": true
             },
             "production": {
               "optimization": true,
@@ -125,14 +126,14 @@
               "sourceMap": false,
               "namedChunks": false,
               "extractLicenses": true,
-              "vendorChunk": false
+              "vendorChunk": false,
+              "buildOptimizer": true
             }
           }
         }
       }
     }
   },
-  "defaultProject": "AspNetSpa",
   "cli": {
     "analytics": "45cd4591-9e7b-44dc-90dc-6b9e4fe63cb9"
   }
