--- a/.github/workflows/project-ci.yml
+++ b/.github/workflows/project-ci.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - 'feature/**'
+      - 'bugfix/**'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
