bugfix: update pipelines to use the most recent actions (#62)
* Updated actions
* Extended CI build to trigger on bugfix branches
* Update Release Notes
* Update admin pipeline

---------

Co-authored-by: Michael Koster <michael.koster@agi-sda.com>

--- a/.github/workflows/admin-cleanup.yml
+++ b/.github/workflows/admin-cleanup.yml
@@ -5,33 +5,32 @@ on:
       days:
         description: 'Number of days.'
         required: true
-        default: 30
+        default: '30'
       minimum_runs:
         description: 'The minimum runs to keep for each workflow.'
         required: true
-        default: 6
+        default: '6'
       delete_workflow_pattern:
         description: 'The name or filename of the workflow. if not set then it will target all workflows.'
         required: false
-        default: project-ci.yml
       delete_workflow_by_state_pattern:
         description: 'Remove workflow by state: active, deleted, disabled_fork, disabled_inactivity, disabled_manually'
         required: true
-        default: "All"
+        default: "ALL"
         type: choice
         options:
-          - "All"
+          - "ALL"
           - active
           - deleted
           - disabled_inactivity
           - disabled_manually
       delete_run_by_conclusion_pattern:
-        description: 'Remove workflow by conclusion: action_required, cancelled, failure, skipped, success'
+        description: 'Remove workflow by conclusion: action_required, canceled, failure, skipped, success'
         required: true
-        default: "All"
+        default: "ALL"
         type: choice
         options:
-          - "All"
+          - "ALL"
           - action_required
           - cancelled
           - failure
@@ -40,7 +39,6 @@ on:
       dry_run:
         description: 'Only log actions, do not perform any delete operations.'
         required: false
-        default: false
   schedule:
     - cron: '0 0 1 * *'
 # Run monthly, at 00:00 on the 1st day of month.
