--- a/samples/net6/WebAspSpa/WebAspSpa.csproj
+++ b/samples/net6/WebAspSpa/WebAspSpa.csproj
@@ -8,10 +8,11 @@
     <SpaProxyServerUrl>https://localhost:44433</SpaProxyServerUrl>
     <SpaProxyLaunchCommand>npm start</SpaProxyLaunchCommand>
     <ImplicitUsings>enable</ImplicitUsings>
+    <RootNamespace>WebAspSpa</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="6.0.16" />
+    <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="6.0.36" />
   </ItemGroup>
 
   <ItemGroup>
