--- a/samples/net6/WebBlazorWasmApp/Server/WebBlazorWasmApp.Server.csproj
+++ b/samples/net6/WebBlazorWasmApp/Server/WebBlazorWasmApp.Server.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.16" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.36" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.36" />
   </ItemGroup>
 
   <ItemGroup>
