--- a/.gitignore
+++ b/.gitignore
@@ -354,3 +354,4 @@ MigrationBackup/
 /samples/net6/WebAspSpa/.config
 /samples/net8/WebAspSpa/ClientApp/.angular/
 /samples/net8/WebAspSpa/.config
+/src/RemoteTools/CheckSum/Properties/launchSettings.json
