Add parts of the rsync copy service

--- a/src/Extension/RemoteDebuggerLauncher/RemoteDebuggerLauncher.csproj
+++ b/src/Extension/RemoteDebuggerLauncher/RemoteDebuggerLauncher.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Options\TransferModeDisplayNameConverter.cs" />
     <Compile Include="Options\TransferMode.cs" />
     <Compile Include="RemoteOperations\IRemoteBulkCopySessionService.cs" />
+    <Compile Include="RemoteOperations\ISecureShellSessionBaseService.cs" />
     <Compile Include="RemoteOperations\RsyncRemoteBulkCopySessionService.cs" />
     <Compile Include="RemoteOperations\ShellStreamExtensions.cs" />
     <Compile Include="Infrastructure\StringExtensions.cs" />
