--- a/src/Extension/RemoteDebuggerLauncher/RemoteDebuggerLauncher.csproj
+++ b/src/Extension/RemoteDebuggerLauncher/RemoteDebuggerLauncher.csproj
@@ -201,72 +201,72 @@
     <Content Include="3rdPartyLicense.txt">
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="rsync\cygcrypto-50.dll">
+    <Content Include="ToolsExternal\cygcrypto-50.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
       <VSIXSubPath>rsync</VSIXSubPath>
     </Content>
-    <Content Include="rsync\cyggcc_s-seh-1.dll">
+    <Content Include="ToolsExternal\cyggcc_s-seh-1.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
       <VSIXSubPath>rsync</VSIXSubPath>
     </Content>
-    <Content Include="rsync\cygiconv-2.dll">
+    <Content Include="ToolsExternal\cygiconv-2.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
       <VSIXSubPath>rsync</VSIXSubPath>
     </Content>
-    <Content Include="rsync\cygintl-8.dll">
+    <Content Include="ToolsExternal\cygintl-8.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
       <VSIXSubPath>rsync</VSIXSubPath>
     </Content>
-    <Content Include="rsync\cyglz4-1.dll">
+    <Content Include="ToolsExternal\cyglz4-1.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
       <VSIXSubPath>rsync</VSIXSubPath>
     </Content>
-    <Content Include="rsync\cygpopt-0.dll">
+    <Content Include="ToolsExternal\cygpopt-0.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
       <VSIXSubPath>rsync</VSIXSubPath>
     </Content>
-    <Content Include="rsync\cygwin1.dll">
+    <Content Include="ToolsExternal\cygwin1.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
       <VSIXSubPath>rsync</VSIXSubPath>
     </Content>
-    <Content Include="rsync\cygz.dll">
+    <Content Include="ToolsExternal\cygz.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
       <VSIXSubPath>rsync</VSIXSubPath>
     </Content>
-    <Content Include="rsync\cygzstd-1.dll">
+    <Content Include="ToolsExternal\cygzstd-1.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
       <VSIXSubPath>rsync</VSIXSubPath>
     </Content>
-    <Content Include="rsync\rsync.exe">
+    <Content Include="ToolsExternal\rsync.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
       <VSIXSubPath>rsync</VSIXSubPath>
     </Content>
-    <Content Include="rsync\ssh-add.exe">
+    <Content Include="ToolsExternal\ssh-add.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
       <VSIXSubPath>rsync</VSIXSubPath>
     </Content>
-    <Content Include="rsync\ssh-agent.exe">
+    <Content Include="ToolsExternal\ssh-agent.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
       <VSIXSubPath>rsync</VSIXSubPath>
     </Content>
-    <Content Include="rsync\ssh-keygen.exe">
+    <Content Include="ToolsExternal\ssh-keygen.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
       <VSIXSubPath>rsync</VSIXSubPath>
     </Content>
-    <Content Include="rsync\ssh.exe">
+    <Content Include="ToolsExternal\ssh.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
       <VSIXSubPath>rsync</VSIXSubPath>
@@ -275,7 +275,7 @@
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <None Include="RemoteTools\readme.md" />
-    <None Include="rsync\readme.md" />
+    <None Include="ToolsExternal\readme.md" />
     <None Include="Infrastructure\readme.md" />
     <None Include="Options\readme.md" />
     <None Include="ProjectSystem\readme.md" />
