--- a/samples/net8/ConsoleApp/Properties/launchSettings.json
+++ b/samples/net8/ConsoleApp/Properties/launchSettings.json
@@ -14,9 +14,9 @@
       "environmentVariables": {
         "answer": "42"
       },
-      "hostName": "raspberrypi",
+      "hostName": "chzh-vm003",
       "hostPort": "22",
-      "userName": "pi",
+      "userName": "mko",
       "privateKey": "%userprofile%\\.ssh\\id_rsa"
     }
   }
