add transfermode config to launch profile

--- a/samples/net8/ConsoleApp/Properties/launchSettings.json
+++ b/samples/net8/ConsoleApp/Properties/launchSettings.json
@@ -17,7 +17,8 @@
       "hostName": "chzh-vm003",
       "hostPort": "22",
       "userName": "mko",
-      "privateKey": "%userprofile%\\.ssh\\id_rsa"
+      "privateKey": "%userprofile%\\.ssh\\id_rsa",
+      "transferMode": "SecureCopyDelta"
     }
   }
 }
