--- a/src/RemoteTools/CheckSum/exe/Properties/launchSettings.json
+++ b/src/RemoteTools/CheckSum/exe/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "CheckSum": {
       "commandName": "Project",
-      "commandLineArgs": "D:\\DevData\\DataSet1"
+      "commandLineArgs": "D:\\Temp\\test"
     }
   }
 }
