--- a/samples/net8/ConsoleApp/Properties/launchSettings.json
+++ b/samples/net8/ConsoleApp/Properties/launchSettings.json
@@ -18,7 +18,7 @@
       "hostPort": "22",
       "userName": "mko",
       "privateKey": "%userprofile%\\.ssh\\id_rsa",
-      "transferMode": "SecureCopyDelta"
+      "deployTransferMode": "SecureCopyDelta"
     }
   }
 }
