--- a/samples/net8/WebAspSpa/ClientApp/package.json
+++ b/samples/net8/WebAspSpa/ClientApp/package.json
@@ -38,6 +38,7 @@
     "@types/jasmine": "~4.3.0",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "^18.7.11",
+    "eslint": "^9.37.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.1",
